# seozoom-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/seozoom_mcp/: client.py  server.py
