[project]
name = "seozoom-mcp"
version = "0.1.0"
description = "MCP server for SEOZoom API"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["mcp", "seozoom", "seo", "api"]
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
seozoom-mcp = "seozoom_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seozoom_mcp"]
